@@ -7,6 +7,8 @@ TODO: remain
         - honor autoconf detection of EV_USE_CLOCK_SYSCALL, also double-
           check that the syscall number is available before trying to
           use it (reported by ry@tinyclouds).
+        - use GetSysTimeAsFileTime instead of _timeb on windows, for
+          slightly higher accuracy.
 
 3.6  Tue Apr 28 02:49:30 CEST 2009
 	- multiple timers becoming ready within an event loop iteration
